# cpx

./: .gitignore  README.md  pyproject.toml
cpx/: __init__.py  __main__.py
cpx/filters/: __init__.py  _btype.py  nan.py  parallel.py  spatial.py  temporal.py  utils.py
cpx/io/: __init__.py  _exceptions.py  tiff.py  utils.py  validation.py  video.py
cpx/metrics/: __init__.py  local_correlation.py  pnr.py
cpx/registration/: __init__.py  _numerics.py  model.py  rigid.py
cpx/utils/: __init__.py  info.py  notebook.py  utils.py
