[tool.poetry]
name = "cpx"
version = "0.0.1"
description = ""
authors = ["Ryan Peters <RyanIRL@icloud.com>"]
readme = "README.md"
classifiers = [  
    "Development Status :: 2 - Pre-Alpha",
]
include = [
    "LICENSE",
    "cpx/py.typed"
]
packages = [
    {include = "cpx"}
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">=1.20"
matplotlib = "*"
opencv-python-headless = "*"
scikit-image = "*"
scikit-learn = "*"
tifffile = "*"
joblib = "*"
scipy = "*"
tqdm = "*"
psutil = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


